# ssh-bridge

./: .gitignore  .mcp.json  .mcp.json.example  Cargo.toml  LICENSE  README.md  config.example.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-4-clarifications.md  task-4-report.md  task-5-clarifications.md  task-5-report.md  task-6-clarifications.md
docs/: performance.md  security.md
docs/.superpowers/sdd/: task-6-unified-diff-patch-design.md  task-6-unified-diff-patch-implementation-plan.md  tasks-7-8-strict-mcp-design.md  tasks-7-8-strict-mcp-implementation-plan.md
docs/superpowers/plans/: 2026-07-18-codex-ssh-bridge-rust.md  2026-07-18-task-3-second-review-fixes.md  2026-07-18-task-4-remote-read.md  2026-07-18-task-5-safe-atomic-write.md  2026-07-19-final-review-hardening.md  2026-07-22-remote-codex-parity.md  2026-07-23-full-architecture-release.md  2026-07-23-profile-memory-ci.md  2026-07-23-remote-binary-helper.md  (+4 more)
legacy/python-prototype/: config.example.json
mcp/: server.py
scripts/: codex-ssh  install-local
skills/remote-ssh-ops/: SKILL.md
src/: capability.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  path.rs  profile.rs  quote.rs  remote_helper.rs  remote_helper_protocol.rs
src/cli/: install.rs
src/mcp/: mod.rs  protocol.rs  render.rs  stdio.rs  tools.rs
src/remote/: metadata.rs  mod.rs  patch.rs  protocol.rs  read.rs  run.rs  search.rs  write.rs
src/ssh/: argv.rs  dispatcher.rs  dispatcher.sh  frame.rs  helper.rs  mod.rs  process.rs  session.rs
tests/: cli.rs  core.rs  dispatcher.rs  fake_ssh.py  mcp_protocol.rs  mcp_tools.rs  packaging.rs  performance_acceptance.rs  real_ssh.rs  remote_helper.rs  remote_helper_mode.rs  remote_ops.rs  session.rs  ssh_transport.rs  test_bridge.py
tests/fixtures/: fake-ssh.sh
tests/support/: mod.rs
(+15 files in other folders)
