[package]
name = "codex-ssh-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
base64 = "0.22"
globset = "0.4"
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tempfile = "3.20"
tokio = { version = "1", features = ["sync", "rt", "macros", "process", "io-util", "time", "fs", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.9"
toml = "0.9"

[dev-dependencies]
proptest = "1.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"
