[package]
name = "codex-ssh-bridge"
version = "0.2.2"
edition = "2024"
rust-version = "1.91.1"

[features]
default = []
profile = []

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.20"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "process", "io-util", "io-std", "time", "fs", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.9"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"
